[Fix] Smallchat is now hidden by default on the admin and add a new Help button to open it.  (#611)
* Add a new Help button to encapsulate the small chat management + add FAQ link

* Fix same id on upload button

* Fix smallchat being display/hidden when requested.

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,7 @@ body {
 a {
     text-decoration: none;
 }
+
+#Smallchat {
+    visibility: hidden;
+}
